--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "genius",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gu1lherm3frias.github.io/gu1lherm3frias.github.io",
+  "homepage": "https://gu1lherm3frias.github.io/genius",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
